# Artifact-Pose-System

./: .gitignore  DEPLOY_LOCAL_RPI_ANDROID.md  HUONG_DAN_HE_THONG.md  artifact_db.sql  build_and_run_mobile_app.md  readme.md
ai_module/: analyze_damage.py  merge_datasets.py  pbl5-train-20-04-test-ras-v1_2.ipynb  pbl5-train-2704-chieu.ipynb  pbl5_train_2stage_kaggle.ipynb  prepare_dataset_1804.py  preprocess_2stage.py  test_webcam.py
client/artifact_app/: .gitignore  README.md  pubspec.yaml
client/artifact_app/lib/: main.dart  theme.dart
client/artifact_app/linux/: CMakeLists.txt
client/artifact_app/web/: index.html  manifest.json
client/artifact_app/windows/: CMakeLists.txt
embed/device_agent/: .env  .gitignore  __init__.py  api_client.py  camera_manager.py  hardware_controller.py  main_app.py
embed/device_agent/adapters/: __init__.py  camera_manager.py  hardware_controller.py
server/: .dockerignore  .env  .env.docker  .env.example  Dockerfile  README.md  docker-compose.yml  env.docker.example  requirements-ai.txt  requirements.txt
server/app/: main.py
server/app/api/: dependencies.py
server/native/pose_solver_cpp/: CMakeLists.txt  bindings.cpp
server/native/pose_solver_cpp/include/: deviation_calculator.h  hybrid_pose_solver.h  orb_matcher.h  quadtree.h  stereo_triangulation.h
server/native/pose_solver_cpp/src/: deviation_calculator.cpp  hybrid_pose_solver.cpp  orb_matcher.cpp  quadtree.cpp  stereo_triangulation.cpp
server/tools/: create_admin.py  list_users.py  organize_camera_params.py  smoke_test_api_mqtt_ack.py
server/web_ui/: index.html
(+117 files in other folders)
